add sentiments tags

--- a/src/components/NewsCard/NewsCard.module.scss
+++ b/src/components/NewsCard/NewsCard.module.scss
@@ -11,9 +11,17 @@
 
 .headerRow {
     display: flex;
-    justify-content: space-between;
     font-size: 0.85rem;
     color: #aaa;
+    justify-content: space-between;
+
+    &__stat {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 16px;
+        flex-wrap: wrap;
+    }
 }
 
 .title {
