--- a/src/components/NewsCard/NewsTrafficBlock/NewsTrafficBlock.module.scss
+++ b/src/components/NewsCard/NewsTrafficBlock/NewsTrafficBlock.module.scss
@@ -4,11 +4,17 @@
     gap: 4px;
 }
 
-.country {
-
-}
-
 .value {
     font-weight: 500;
     color: white;
+}
+
+.list {
+    display: flex;
+    flex-direction: row;
+    gap: 4px;
+
+    @media screen and (max-width: 600px) {
+        flex-direction: column;
+    }
 }
